--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,15 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
+        "jeroennoten/laravel-adminlte": "^3.2",
         "laracasts/flash": "^3.1",
         "laravel/framework": "^7.0",
+        "laravel/nexmo-notification-channel": "^2.3",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0"
+        "laravel/ui": "^2.0",
+        "pagseguro/pagseguro-php-sdk": "^6.0",
+        "ramsey/uuid": "^4.0",
+        "spatie/laravel-sluggable": "^2.4"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -41,6 +46,9 @@
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files": [
+            "helpers/functions.php"
         ]
     },
     "autoload-dev": {
